<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ContactsActivity!</string>
    <string name="app_name">联系人</string>
    <string name="add_contact">录入资料</string>
    <string name="contact_list">会员列表</string>
    <string name="contact_detail">资料详情</string>
    <string name="avatar_icon_desc">上传图片能为您增加50%的关注度</string>
    <string name="company">公司：</string>
    <string name="name">姓名：</string>
    <string name="position">职位：</string>
    <string name="contact">联系方式</string>
    <string name="phone_num">手机号码：</string>
    <string name="qq">Q&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Q：</string>
    <string name="email">邮箱地址：</string>
    <string name="personality">个性签名：</string>
    <string name="date">出生日期：</string>
    <string name="sex">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别：</string>
    <string name="save">保存</string>
    <string name="home">主页</string>
    <string name="man">男</string>
    <string name="female">女</string>
    <string name="group_name">%1$s(%2$d/%3$d人)</string>
    <string name="fengcuiyuan">风翠园</string>
    
    <string name="initialization">正在刷新...</string>

</resources>