<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/head_icon"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dip"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/contact_detail"
            android:textColor="#ffffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <!-- 姓名 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/avatar_btn"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dip"
            android:layout_marginTop="15dip"
            android:src="@drawable/default_icon" />

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_toRightOf="@id/avatar_btn"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:text="@string/name"
                android:textColor="#ff000000" />

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:textColor="#ff000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/computer_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_layout"
            android:layout_marginTop="15dip"
            android:layout_toRightOf="@id/avatar_btn"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:text="@string/company"
                android:textColor="#ff000000" />

            <TextView
                android:id="@+id/company_tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:textColor="#ff000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/computer_layout"
            android:layout_marginTop="15dip"
            android:layout_toRightOf="@id/avatar_btn"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:text="@string/position"
                android:textColor="#ff000000" />

            <TextView
                android:id="@+id/position_tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:textColor="#ff000000"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dip"
        android:background="@drawable/background"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/contact"
        android:textColor="#ffffffff"
        android:textSize="20sp" />

    <!-- 联系方式 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="5dip"
            android:text="@string/phone_num"
            android:textColor="#ff000000" />

        <TextView
            android:id="@+id/phonenum_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:gravity="center_vertical"
            android:textColor="#ff000000"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#336e6e6e"
        android:focusable="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#106e6e6e"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="5dip"
            android:text="@string/qq"
            android:textColor="#ff000000" />

        <TextView
            android:id="@+id/qq_tv"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginRight="5dip"
            android:gravity="center_vertical"
            android:textColor="#ff000000"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#336e6e6e"
        android:focusable="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="5dip"
            android:text="@string/email"
            android:textColor="#ff000000" />

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginRight="5dip"
            android:gravity="center_vertical"
            android:textColor="#ff000000"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#336e6e6e"
        android:focusable="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#106e6e6e"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="5dip"
            android:text="@string/personality"
            android:textColor="#ff000000" />

        <TextView
            android:id="@+id/personality_tv"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginRight="3dip"
            android:gravity="center_vertical"
            android:textColor="#ff000000"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#336e6e6e"
        android:focusable="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="5dip"
            android:text="@string/date"
            android:textColor="#ff000000" />

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginRight="5dip"
            android:gravity="center_vertical"
            android:textColor="#ff000000"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#336e6e6e"
        android:focusable="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#106e6e6e"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="5dip"
            android:text="@string/sex"
            android:textColor="#ff000000" />

        <TextView
            android:id="@+id/sex_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dip"
            android:gravity="center_vertical"
            android:text="dsd是多少"
            android:textColor="#ff000000"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#336e6e6e"
        android:focusable="true" />

</LinearLayout>