<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/members_list"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/contact_list"
            android:textColor="#ffffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/head_count"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/background"
            android:gravity="center"
            android:text="@string/group_name"
            android:textColor="#ffffffff"
            android:textSize="20sp" />
    </RelativeLayout>

		<ListView
			android:id="@+id/list"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:cacheColorHint="#00000000"
			android:layout_weight="1"
			android:background="#106e6e6e"
			android:scrollbars="vertical" />
		<TextView
			android:id="@+id/browse_empty"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:padding="10px"
			android:visibility="gone" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/foot_icon" >

        <ImageView
            android:id="@+id/home_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dip"
            android:background="@drawable/home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_iv"
            android:layout_centerHorizontal="true"
            android:text="@string/home"
            android:textColor="#ff000000" />
    </RelativeLayout>

</LinearLayout>